k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`<hallo.k3s.fepox.com>`)
    kind: Rule
    services:
    - name: nginx
      port: 8888
